--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "binance-pump-bot",
-  "version": "1.0.2",
+  "version": "1.0.2.5-dev",
   "description": "Automation for binance p&d activity",
   "main": "pump.js",
   "dependencies": {
@@ -8,7 +8,8 @@
     "chalk": "^4.1.2",
     "chrome-launcher": "^0.14.1",
     "node-binance-api": "^0.13.0",
-    "ws": "^8.2.3"
+    "ws": "^8.2.3",
+    "console-stamp": "^3.0.3"
   },
   "devDependencies": {},
   "scripts": {
